fix item alignment

--- a/tabs/advanced.css
+++ b/tabs/advanced.css
@@ -14,7 +14,7 @@
 .tab-advanced .checkbox div:nth-child(2) {
     float: left;
 
-    width: 130px;
+    width: 140px;
 
     font-weight: bold;
 }
