--- a/tabs/basic.css
+++ b/tabs/basic.css
@@ -14,7 +14,7 @@
 .tab-basic .checkbox div:nth-child(2) {
     float: left;
 
-    width: 120px;
+    width: 140px;
 
     font-weight: bold;
 }
